--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ultimate-hub-server",
-  "version": "9.3.0",
-  "main": "server.js",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "axios": "^1.6.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
